Плагин тулбара динамически вызывает виджеты внутри себя

--- a/src/Modules/AngularMapLibreGLModule/Widgets/ToolbarWidgetComponent/ToolbarWidgetComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Widgets/ToolbarWidgetComponent/ToolbarWidgetComponent.html
@@ -1,3 +1,8 @@
-<div class="FlexColumn">
-  <ng-content></ng-content>
+<div class="Toolbar">
+  <div class="FlexColumn">
+    <ng-content></ng-content>
+  </div>
+  <div class="WidgetColumn">
+    <ng-container #WidgetsContainer></ng-container>
+  </div>
 </div>
