Обновление панели заголовка для виджетов

--- a/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
@@ -1,1 +1,5 @@
-<TitlePanelComponent [Title]="'Проекты бурения'" [IsShowCloseIcon]="true" />
+<TitlePanelComponent
+  [Title]="'Проекты бурения'"
+  [IsShowCloseIcon]="true"
+  [IsShowInternalContentSwitchIcon]="true"
+></TitlePanelComponent>
