Добавлен компонент с переключателями для виджета проектов бурения

--- a/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
@@ -2,4 +2,6 @@
   [Title]="'Проекты бурения'"
   [IsShowCloseIcon]="true"
   [IsShowInternalContentSwitchIcon]="true"
-></TitlePanelComponent>
+>
+  <DrillingProjectsWidgetSwitchersComponent />
+</TitlePanelComponent>
