Обновлена верстка проектов бурения

--- a/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
@@ -5,3 +5,25 @@
 >
   <DrillingProjectsWidgetSwitchersComponent />
 </TitlePanelComponent>
+<div class="WidgetRow">
+  <div>Место работы:</div>
+  <div>
+    <nz-select [nzSize]="'small'" [nzPlaceHolder]="'Выберите вариант'" />
+  </div>
+</div>
+<div class="WidgetRow">
+  <div>Буровой станок:</div>
+  <div>
+    <nz-select [nzSize]="'small'" [nzPlaceHolder]="'Выберите вариант'" />
+  </div>
+</div>
+<div class="WidgetRow">
+  <div>Проект:</div>
+  <div>
+    <nz-select [nzSize]="'small'" [nzPlaceHolder]="'Выберите вариант'" />
+  </div>
+</div>
+<div class="WidgetRow">
+  <div>Проектные <nz-switch [nzSize]="'small'" /></div>
+  <div>Фактические <nz-switch [nzSize]="'small'" /></div>
+</div>
