--- a/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
@@ -27,3 +27,4 @@
   <div>Проектные <nz-switch [nzSize]="'small'" /></div>
   <div>Фактические <nz-switch [nzSize]="'small'" /></div>
 </div>
+<DateTimeIntervalComponent />
