Обновлены стили и добавлен загрузчик для инструмента транспорта

--- a/src/Modules/AngularMapLibreGLModule/Widgets/ToolbarWidgetComponent/ToolbarWidgetComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Widgets/ToolbarWidgetComponent/ToolbarWidgetComponent.html
@@ -1,5 +1,5 @@
 <div class="Toolbar">
-  <div class="FlexColumn">
+  <div class="FlexColumn MinimalGap">
     <ng-content></ng-content>
   </div>
   <div class="WidgetColumn">
