--- a/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
+++ b/src/Modules/AngularMapLibreGLModule/Widgets/DrillingProjectsWidgetComponent/DrillingProjectsWidgetComponent.html
@@ -28,7 +28,7 @@
 </div>
 <div class="WidgetRow">
   <button nz-button>Показать</button>
-  <div class="FlexRowGroup">
+  <div class="FlexRow MinimalGap">
     <nz-select [nzSize]="'small'" [nzPlaceHolder]="'Выберите вариант'">
       <nz-option [nzValue]="'XML'" [nzLabel]="'XML'" />
       <nz-option [nzValue]="'DXF'" [nzLabel]="'DXF'" />
